# knuth-plass-line-breaking

./: .flake8  .gitignore  .pre-commit-config.yaml  experiments.ipynb  experiments2.ipynb  pyproject.toml
typescript/: package.json
typescript/public/: index.html
typescript/src/: App.tsx  canvasRendering.ts  linebreaking.ts  svgRendering.tsx  text.ts
typesetting/: __init__.py  _cairofontface.py  _raqm.py  cairo.py  font.py  hyphenation.py  layout.py
typesetting/layout/: __init__.py  _greedy.py  _optimal.py  _types.py
